more documentations and code generation with swagger docs
